fix layout issue with header:after

--- a/style.css
+++ b/style.css
@@ -85,6 +85,7 @@ html {
   scrollbar-color: var(--color-purple) var(--color-purple);
   scrollbar-width: thin;
   caret-color: orange;
+  height: 100%;
 }
 
 body {
@@ -92,7 +93,8 @@ body {
   color: var(--color-white);
   line-height: 1.6;
   padding: 0;
-  margin: 0.5rem;
+  margin: 0;
+  min-height: 100vh;
 }
 
 header {
@@ -100,7 +102,7 @@ header {
   box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.9);
   padding: 5px 0 0 0;
   width: calc(100%);
-  position: fixed;
+  position: sticky;
   top: 0;
   left: 0;
   right: 0;
@@ -120,8 +122,8 @@ nav#site-title-bar {
   );
   border-radius: 0px 200px 200px 0px;
   /* border-right: 8px white solid; */
+  overflow-x: hidden;
   user-select: none;
-  margin-right: 10px;
 
   a {
     line-height: 1;
@@ -160,7 +162,7 @@ nav#site-title-bar:hover::after {
   position: absolute;
   left: 10px;
   bottom: 52.5px;
-  width: 100%;
+  width: 99vw;
   height: 20px;
   background: radial-gradient(
     ellipse 100% 80% at 20% 0,
@@ -361,7 +363,8 @@ main {
   display: flex;
   flex-direction: row;
   gap: 0.5rem;
-  min-height: min-content;
+  margin: 0.5rem;
+  overflow: hidden;
 }
 
 aside {
@@ -646,7 +649,7 @@ article a {
 }
 
 h1 {
-  font-size: 3.5rem;
+  font-size: 3.1rem;
   line-height: 1;
   letter-spacing: 0.05em;
   margin: 1rem 0 2rem 0;
@@ -689,17 +692,17 @@ p a.btn-inter-nav {
   height: 2.5rem;
   border-radius: 20px;
   background: radial-gradient(
-    circle at top,
-    hsla(var(--color-gray-700-a), 0.5),
-    hsla(var(--color-gray-750-a), 0.5),
-    hsla(var(--color-gray-800-a), 0.5),
-    hsla(var(--color-gray-850-a), 0.5)
+    circle at bottom,
+    hsla(var(--color-gray-700-a), 0.2),
+    hsla(var(--color-gray-750-a), 0.3)
   );
+  backdrop-filter: blur(50px);
   color: var(--color-gray-100);
   font-size: 1.1rem;
   font-family: inherit;
   box-shadow: 0px 5px 10px 2px hsla(var(--color-gray-900-a), 0.85),
-    inset 0px 10px 15px -10px hsla(var(--color-gray-650-a), 0.5);
+    inset 0px -10px 15px -10px hsla(var(--color-gray-650-a), 0.2),
+    inset 0px 5px 5px 0px hsla(var(--color-gray-900-a), 0.5);
   transition: transform 0.25s ease-in-out, box-shadow 0.3s ease-out;
   display: flex;
   justify-content: center;
@@ -714,14 +717,15 @@ p a.btn-inter-nav {
     color: var(--color-white);
     cursor: pointer;
     background: radial-gradient(
-      circle at center,
-      hsla(var(--color-gray-650-a), 0.5),
-      hsla(var(--color-gray-700-a), 0.5),
-      hsla(var(--color-gray-750-a), 0.5),
+      circle at bottom,
+      hsla(var(--color-gray-650-a), 0.2),
+      hsla(var(--color-gray-700-a), 0.3),
+      hsla(var(--color-gray-750-a), 0.4),
       hsla(var(--color-gray-800-a), 0.5)
     );
     box-shadow: 0px 45px 19px 2px hsla(var(--color-gray-900-a), 0.8),
-      inset 0px 8px 13px -10px hsla(var(--color-gray-550-a), 0.4);
+      inset 0px -8px 13px -10px hsla(var(--color-gray-550-a), 0.3),
+      inset 0px 8px 10px 5px hsla(var(--color-gray-900-a), 0.3);
   }
 
   &:active {
